--- a/docker_vol/proxy/nginx/proxy-pass.conf
+++ b/docker_vol/proxy/nginx/proxy-pass.conf
@@ -1,7 +1,19 @@
+#server {
+#    listen 80;
+#    server_name kibana.local;
+#    location  / {
+#        proxy_pass http://kibana:5601;
+#        proxy_redirect off;
+#        proxy_set_header Host $host;
+#        proxy_set_header X-Forward-For $proxy_add_x_forwarded_for;
+#    }
+#}
+
 server {
     listen 80;
+    server_name alerta.local;
     location  / {
-        proxy_pass http://localhost:5601;
+        proxy_pass http://alerta:7001;
         proxy_redirect off;
         proxy_set_header Host $host;
         proxy_set_header X-Forward-For $proxy_add_x_forwarded_for;
